			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02n: *********************************

BUG: (05/11/05, SMR) Cells with bus pins are the wrong size.
FIX: Restore the "wipeon1or2" flag to Schematics bus pins, then rework the sequence of calling
     "Technology.getShapeOfNode()" so that Schematics overrides are not affected by that flag.

IMP: (05/09/05, JKG) LE sizes now stored on top level cell instead of leaf instances.

IMP: (05/09/05, JKG) Improved readability of hierarchical path in status bar. Also,
    path shown for schematics. Also, second row remains visible because redraw of
    window is annoying when second row disappears and reappears.

IMP: (05/09/05, JKG) Added "recently visited cells" list when right-clicking on
    back/forward cell history buttons.

BUG: (05/10/05. GVG) Exception in CIF generation due to latest changes in Technology.getShapeOfNode/getShapeOfArc.
In io.output.Geometry, EditWindow is always null.
FIX: Using simple passing only Geometric to getShapeOfNode/getShapeOfArc function.

IMP: (05/09/05, GVG) Clicking on library on Mac OS set working directory extracted from that library (Bug #308)

BUG: (05/09/05, GVG) Cell attributes wrongly copied by Clipboard if a previous clipboard copied a cell attribute (Bug #306).
FIX: Include cell attributes in Clipboard cleanup process.

BUG: (05/09/05, GVG) Cut/Paste or Copy/Paste of cell attributes not working (Bug #304)
FIX: Extra code in Clipboard to handle cell attributes

BUG: (05/09/05, SMR) Screen redraws too much (Bug #307).
FIX: VarContext information must be passed down the hierarchy by the redisplay code, and
     not stored in the EditWindow.  In addition, the Technology method "getShapeOfNode()"
     must take a VarContext as a parameter, and not obtain it from the EditWindow.

BUG: (05/09/05, SMR) Screen is shifted after PostScript output (Bug #301).